a few more styles fixing overflow in the Scroll

--- a/src/index.scss
+++ b/src/index.scss
@@ -32,33 +32,43 @@ min-height: 100vh;
 
 .appTitleContainer {
 	
-	padding: 10px;
+	padding-top: 10px;
 	width: 100%;
 	text-align: center;
 }
 
 .scrollContainer {
 	width: 365px;
-	margin: 10% auto;
+	margin: 0 auto;
 	padding:15px;
 	
+}
+
+.messageContainerBuffer {
+	height:300px;
+	position:relative;
+	overflow:auto;
 }
 
 .messageContainer {
 	background: white;
 	padding: 10px;
-	font-size: 1.3em;
-	max-height: 300px; /* reasonable estimate */
-    overflow-y: auto; /* show scrollbar only when text overflows vertically */
-    position: relative;
-}
-
-.messageContainerBuffer {
-	height: 300px;
+	font-size: 1.2em;
+	list-style-type: none;
+	padding: 0px;
+	margin: 0px;
+	position:absolute;
+	overflow:hidden;
+	bottom:0;
+	max-height: 100%;
+	left: 0;
+	width:100%;
 }
 
 .message {
 	border-bottom: 1px solid #f2f2f2;
+	padding:  2px 10px;
+	word-break: break-all;
 }
 
 input {
@@ -97,6 +107,7 @@ input {
 	.scrollContainer {
 		width: 95%;
 		padding: 2px;
+		margin: 10% auto;
 		
 	}
 }
